SmartHire_App/force-app/main/default/objects/Error_Log__c/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <label>Exception Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 