SmartHire_App/force-app/main/default/objects/Error_Log__c/fields/Log_Time__c.field-meta.xml
<CustomField>
    <fullName>Log_Time__c</fullName>
    <label>Log Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField> 