SmartHire_App/force-app/main/default/objects/Error_Log__c/fields/Method_Name__c.field-meta.xml
<CustomField>
    <fullName>Method_Name__c</fullName>
    <label>Method Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField> 